--- a/fly.toml
+++ b/fly.toml
@@ -1,16 +1,16 @@
-# fly.toml app configuration file generated for ciudadanochile on 2025-05-07T15:13:35Z
+# fly.toml app configuration file generated for ciudadanochile-frosty-pine-4167 on 2025-05-07T13:39:30-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'ciudadanochile'
+app = 'ciudadanochile-frosty-pine-4167'
 primary_region = 'scl'
 console_command = '/rails/bin/rails console'
 
 [build]
 
 [http_service]
-  internal_port = 8080
+  internal_port = 3000
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
@@ -21,4 +21,3 @@ console_command = '/rails/bin/rails console'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
