--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,19 @@
 branch-defaults:
   feature/eb-config:
-    environment: null
-    group_suffix: null
+    environment: ciudadanochile-dev
+environment-defaults:
+  ciudadanochile-dev:
+    branch: null
+    repository: null
 global:
+  application_name: ciudadanochile
+  default_ec2_keyname: aws_nodeserver
+  default_platform: Ruby 3.4 running on 64bit Amazon Linux 2023
+  default_region: us-east-1
+  include_git_submodules: true
+  instance_profile: null
+  platform_name: null
+  platform_version: null
   profile: eb-cli
+  sc: git
+  workspace_type: Application
